# 2024-spring-ab-python-ads-HW-8

./: DockerFile  Dockerfile  Makefile  README.md  app-deployment.yaml  app-service.yaml  app.py  deployment.yaml  main.py  pyproject.toml  rabbitmq-deployment.yaml  rabbitmq-service.yaml  requirements.txt  worker.py
Dockerfiles/: Dockerfile.api  Dockerfile.worker
api/: app.py  requirements.txt
k8s/: api-deployment.yaml  api-service.yaml  kind-config.yaml  rabbitmq.yaml  redis.yaml  worker-deployment.yaml
worker/: consumer.py  model.py  requirements.txt  utils.py
